mdapipkg/unpackaged/objects/SFDC_External_Key__c.object
<CustomObject>
    <fields>
        <fullName>Group_Key__c</fullName>
        <externalId>true</externalId>
        <label>Group Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Last_Key__c</fullName>
        <label>Last Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SFDC External Key</label>
    <nameField>
        <displayFormat>EK-{0000}</displayFormat>
        <label>SFDC External Key Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SFDC External Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>